[package]
name = "bitstates"
version = "0.1.0"
edition = "2021"
authors = ["Skandrk <skandrk@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Reactive bit state management with event callbacks"
documentation = "https://docs.rs/bitstates"
homepage = "https://github.com/skandrk/bit_states"
repository = "https://github.com/skandrk/bit_states"
keywords = ["bits", "flags", "events", "reactive", "state"]
categories = ["data-structures", "embedded", "hardware-support"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default=["non-atomic"]
non-atomic=[]
atomic=[]

[lib]
proc-macro = true
